--- a/online-help-96-97/task_configuring_cifs_nfs_protocols_on_svms.adoc
+++ b/online-help-96-97/task_configuring_cifs_nfs_protocols_on_svms.adoc
@@ -83,10 +83,10 @@ If a route does not exist, a new route is automatically created based on the gat
 By default, this parameter is set to CN=Computers.
 
   *** Credentials of an administrative account that has sufficient privileges to add the CIFS server to the OU
- .. Select *Encrypt Data while accessing all shares of this SVM* to enable SMB 3.0 encryption for all of the shares of the SVM.
+ .. *Optional:* Select *Encrypt Data while accessing all shares of this SVM* to enable SMB 3.0 encryption for all of the shares of the SVM.
  .. Provision a volume for CIFS storage when configuring the protocol by specifying the share name, size of the share, and access permissions.
  .. Select *Encrypt Data while accessing this share* to enable SMB 3.0 encryption for a particular share.
-. Configure NIS services:
+. *Optional:* Configure NIS services:
  .. Specify the IP addresses of the NIS servers and NIS domain name to configure NIS services on the SVM.
  .. Select the appropriate database type for which you want to add the "`nis`" name service source.
  .. Provision a volume for NFS storage by specifying the export name, size, and permission.
