--- a/online-help-96-97/task_creating_cluster.adoc
+++ b/online-help-96-97/task_creating_cluster.adoc
@@ -34,9 +34,9 @@ If all the nodes are not discovered, click *Refresh*.
 +
 The nodes in that cluster network are displayed in the Nodes field.
 
-. If desired, update the node names in the *Nodes* field.
+. *Optional:* If desired, update the node names in the *Nodes* field.
 . Enter the password for the cluster.
-. Enter the feature license keys.
+. *Optional:* Enter the feature license keys.
 . Click *Submit*.
 
 == What to do next
