--- a/online-help-96-97/concept_protection_policies.adoc
+++ b/online-help-96-97/concept_protection_policies.adoc
@@ -24,9 +24,9 @@ You can use System Manager to create cluster-level asynchronous mirror policies,
 +
 Low indicates that the transfer has the lowest priority. Low priority transfers are usually scheduled after normal priority transfers. By default, the transfer priority is set to Normal.
 
-. Select the *Enable Network Compression* check box to compress the data that is being transferred during a data transfer.
-. For an asynchronous mirror policy, select the *Transfer All Source Snapshot Copies* check box to include the "`all_source_snapshots`" rule to the mirror policy, which backs up all of the Snapshot copies from the source volume.
-. Click *Add Comments* to add additional comments for the policy.
+. *Optional:* Select the *Enable Network Compression* check box to compress the data that is being transferred during a data transfer.
+. *Optional:* For an asynchronous mirror policy, select the *Transfer All Source Snapshot Copies* check box to include the "`all_source_snapshots`" rule to the mirror policy, which backs up all of the Snapshot copies from the source volume.
+. *Optional:* Click *Add Comments* to add additional comments for the policy.
 . For a vault policy or mirror vault policy, specify a SnapMirror label and a destination retention count.
 . Click *Create*.
 
