--- a/online-help-96-97/concept_quotas.adoc
+++ b/online-help-96-97/concept_quotas.adoc
@@ -98,6 +98,7 @@ You can use the Quotas window in System Manager to view quota details such as th
 . From the drop-down menu in the *SVM* field, select the storage virtual machine (SVM) on which the quota that you want to view information about resides.
 . Perform the appropriate action:
 +
+[cols="1a,1a" options="header"]
 |===
 | If...| Then...
 a|
