--- a/online-help-96-97/task_aborting_mirror_vault_relationships.adoc
+++ b/online-help-96-97/task_aborting_mirror_vault_relationships.adoc
@@ -16,7 +16,7 @@ You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to
 . Click *Protection* > *Volume Relationships*.
 . Select the mirror and vault relationship for which you want to stop the data transfer, and then click *Operations* > *Abort*.
 . Select the *Yes, I want to abort the transfer* check box to confirm the operation.
-. Select the *Keep any partially transferred data* check box to retain the data that is already transferred to the destination volume.
+. *Optional:* Select the *Keep any partially transferred data* check box to retain the data that is already transferred to the destination volume.
 . Click *Abort*.
 
 .Results
