--- a/online-help-96-97/task_assigning_luns_to_storage_qos.adoc
+++ b/online-help-96-97/task_assigning_luns_to_storage_qos.adoc
@@ -66,13 +66,14 @@ This value is case-sensitive.
   *** The minimum throughput limit and the maximum throughput limit must be of the same unit type.
   *** If you do not specify the minimum throughput limit, then you can set the maximum throughput limit in IOPS and B/s, KB/s, MB/s, and so on.
   *** If you do not specify the maximum throughput value, the system automatically displays "`Unlimited`" as the value and this value is case-sensitive.
-+
+ +
 The unit that you specify does not affect the maximum throughput.
+
 +
 If the policy group is assigned to more than one object, the maximum throughput that you specify is shared among the objects.
 |===
 
-. Click the link that specifies the number of LUNs to review the list of selected LUNs, and click *Discard* if you want to remove any LUNs from the list.
+. *Optional:* Click the link that specifies the number of LUNs to review the list of selected LUNs, and click *Discard* if you want to remove any LUNs from the list.
 +
 The link is displayed only when multiple LUNs are selected.
 
