--- a/online-help-96-97/task_assigning_volumes_to_storage_qos.adoc
+++ b/online-help-96-97/task_assigning_volumes_to_storage_qos.adoc
@@ -69,14 +69,15 @@ This value is case-sensitive.
   *** The minimum throughput limit and the maximum throughput limit must be of the same unit type.
   *** If you do not specify the minimum throughput limit, then you can set the maximum throughput limit in IOPS, B/s, KB/s, MB/s, and so on.
   *** If you do not specify the maximum throughput value, the system automatically displays "`Unlimited`" as the value.
-+
+  +
 This value is case-sensitive. The unit that you specify does not affect the maximum throughput.
+
 +
 If the policy group is assigned to more than one object, the maximum throughput that you specify is shared among the objects.
 
 |===
 
-. Click the link that specifies the number of volumes if you want to review the list of selected volumes, and then click *Discard* if you want to remove any volumes from the list.
+. *Optional:* Click the link that specifies the number of volumes if you want to review the list of selected volumes, and then click *Discard* if you want to remove any volumes from the list.
 +
 The link is displayed only when multiple volumes are selected.
 
