--- a/online-help-96-97/task_editing_flexgroup_volumes.adoc
+++ b/online-help-96-97/task_editing_flexgroup_volumes.adoc
@@ -28,16 +28,16 @@ FabricPool FlexGroup volumes can be expanded under the following conditions:
 . Click *Storage* > *Volumes*.
 . From the drop-down menu in the *SVM* field, select *All SVMs*.
 . Select the FlexGroup volume that you want to modify, and click *Edit*.
-. If you want to rename the FlexGroup volume, enter the new name in the *Name* field.
+. *Optional:* If you want to rename the FlexGroup volume, enter the new name in the *Name* field.
 +
 Beginning with System Manager 9.6, you can also rename FlexGroup DP volumes.
 
-. Enable the *Encrypted* option to enable encryption for the volume.
+. *Optional:* Enable the *Encrypted* option to enable encryption for the volume.
 +
 This option is available only if you have enabled the Volume Encryption license and if the corresponding platform supports encryption.
 
 . Specify the percentage of the Snapshot copy reserve.
-. Click image:../media/advanced_options.gif[] to modify the FlexGroup volume settings. Refer to link:task_specifying_advanced_options_for_flexgroup_volume.md#GUID-021C533F-BBA1-41A9-A191-DE223A158B4B[Specifying advanced options for a FlexGroup volume].
+. *Optional:* Click image:../media/advanced_options.gif[] to modify the FlexGroup volume settings. Refer to link:task_specifying_advanced_options_for_flexgroup_volume.md#GUID-021C533F-BBA1-41A9-A191-DE223A158B4B[Specifying advanced options for a FlexGroup volume].
 . Specify the size to which you want to resize the FlexGroup volume.
 +
 By default, existing aggregates are used to resize the FlexGroup volume. The minimum size that is allowed for the volume is displayed next to the size fields.
