--- a/online-help-96-97/task_moving_luns.adoc
+++ b/online-help-96-97/task_moving_luns.adoc
@@ -26,7 +26,7 @@ You should use the CLI instead.
 
 . Click *Storage* > *LUNs*.
 . In the *LUN Management* tab, select the LUN that you want to move from the list of LUNs, and then click *Move*.
-. In the *Move Options* area of the *Move LUN* dialog box, specify a new name for the LUN if you want to change the default name.
+. *Optional:* In the *Move Options* area of the *Move LUN* dialog box, specify a new name for the LUN if you want to change the default name.
 . Select the storage object to which you want to move the LUN and perform one of the following actions:
 +
 [options="header"]
