--- a/online-help-96-97/task_restoring_volume_mirror_vault_relationship.adoc
+++ b/online-help-96-97/task_restoring_volume_mirror_vault_relationship.adoc
@@ -70,5 +70,5 @@ Only those volumes with the same language attribute as the source volume are lis
 
 . Select either the latest Snapshot copy or the specific Snapshot copy that you want to restore.
 . Select the confirmation check box to restore the volume from the Snapshot copy.
-. Select the *Enable Network Compression* check box to compress the data that is being transferred during the restore operation.
+. *Optional:* Select the *Enable Network Compression* check box to compress the data that is being transferred during the restore operation.
 . Click *Restore*.
