--- a/online-help-96-97/task_specifying_advanced_options_for_flexcache_volume.adoc
+++ b/online-help-96-97/task_specifying_advanced_options_for_flexcache_volume.adoc
@@ -13,11 +13,11 @@ Beginning with System Manager 9.6, when you edit a FlexCache volume, you can spe
 
 .Steps
 
-. In the *Edit FlexCache volume* window, click image:../media/advanced_options.gif[] to specify the advanced options.
+. *Optional:* In the *Edit FlexCache volume* window, click image:../media/advanced_options.gif[] to specify the advanced options.
 +
 The Advanced Options window displays. It contains sections (the headings in the left column), in which you can specify various options.
 
-. In the *General Details* section, you can edit the permissions for the volume.
+. *Optional:* In the *General Details* section, you can edit the permissions for the volume.
 . In the *Aggregates* section, you can enable the *Select Aggregates* toggle button to override the best practices defaults and select your choices from a list of aggregates.
 . In the *Storage Efficiency* section, you can enable compression and deduplication on the volume.
 +
