--- a/online-help-96-97/task_configuring_cifs_nfs_protocols_on_svms.adoc
+++ b/online-help-96-97/task_configuring_cifs_nfs_protocols_on_svms.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to configure CIFS and NFS protocols on a st
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager classic (available in ONTAP 9.7 and earlier) to configure CIFS and NFS protocols on a storage virtual machine (SVM) to provide file-level data access for NAS clients. To enable the CIFS protocol, you must create data LIFs and the CIFS server. To enable the NFS protocol, you can specify the NIS details and the data LIFs.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to configure CIFS and NFS protocols on a storage virtual machine (SVM) to provide file-level data access for NAS clients. To enable the CIFS protocol, you must create data LIFs and the CIFS server. To enable the NFS protocol, you can specify the NIS details and the data LIFs.
 
 .Before you begin
 
