--- a/online-help-96-97/task_configuring_fc_fcoe_protocol_on_svms.adoc
+++ b/online-help-96-97/task_configuring_fc_fcoe_protocol_on_svms.adoc
@@ -9,7 +9,7 @@ summary: "You can configure the FC protocol and the FCoE protocol on the storage
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager classic (available in ONTAP 9.7 and earlier) to configure the FC protocol and the FCoE protocol on the storage virtual machine (SVM) for SAN hosts. LIFs are created on the most suitable adapters and are assigned to portsets to ensure data path redundancy. Based on your requirements, you can configure either the FC protocol or the FCoE protocols, or both the protocols by using System Manager.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to configure the FC protocol and the FCoE protocol on the storage virtual machine (SVM) for SAN hosts. LIFs are created on the most suitable adapters and are assigned to portsets to ensure data path redundancy. Based on your requirements, you can configure either the FC protocol or the FCoE protocols, or both the protocols by using System Manager.
 
 .Before you begin
 
