--- a/online-help-96-97/task_creating_flexvol_volumes.adoc
+++ b/online-help-96-97/task_creating_flexvol_volumes.adoc
@@ -9,7 +9,7 @@ summary: "You can create a FlexVol volume for your data by using the Create Volu
 :imagesdir: ../media/
 
 [.lead]
-You can create a FlexVol volume for your data by using the Create Volume dialog box in System Manager classic (available in ONTAP 9.7 and earlier). You must always create a separate volume for your data rather than storing data in the root volume.
+You can create a FlexVol volume for your data by using the Create Volume dialog box in ONTAP System Manager classic (available in ONTAP 9.7 and earlier). You must always create a separate volume for your data rather than storing data in the root volume.
 
 .Before you begin
 
