--- a/online-help-96-97/task_creating_snaplock_volumes.adoc
+++ b/online-help-96-97/task_creating_snaplock_volumes.adoc
@@ -9,7 +9,7 @@ summary: "You can use System Manager to create a SnapLock Compliance volume or a
 :imagesdir: ../media/
 
 [.lead]
-You can use System Manager classic (available in ONTAP 9.7 and earlier) to create a SnapLock Compliance volume or a SnapLock Enterprise volume. When you create a volume, you can also set retention times, and choose whether to automate setting the WORM state on data in the volume.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to create a SnapLock Compliance volume or a SnapLock Enterprise volume. When you create a volume, you can also set retention times, and choose whether to automate setting the WORM state on data in the volume.
 
 .Before you begin
 
