--- a/online-help-96-97/task_delegating_administration_to_svm_administrators.adoc
+++ b/online-help-96-97/task_delegating_administration_to_svm_administrators.adoc
@@ -9,7 +9,7 @@ summary: "After setting up a functional storage virtual machine (SVM) or SVMs wi
 :imagesdir: ../media/
 
 [.lead]
-After setting up a functional storage virtual machine (SVM) or SVMs with basic network configuration, you can use System Manager classic (available in ONTAP 9.7 and earlier) to optionally delegate the administration of the SVM to SVM administrators.
+You can use ONTAP System Manager classic (available in ONTAP 9.7 and earlier) to optionally delegate the administration of the SVM to SVM administrators after setting up a functional storage virtual machine (SVM) or SVMs with basic network configuration. 
 
 .About this task
 
