--- a/online-help-96-97/task_viewing_system_manager_log_files.adoc
+++ b/online-help-96-97/task_viewing_system_manager_log_files.adoc
@@ -9,7 +9,7 @@ summary: "If you encounter any issues when using System Manager, you can send th
 :imagesdir: ../media/
 
 [.lead]
-If you encounter any issues when using ONTAP System Manager classic (available in ONTAP 9.7 and earlier), you can send the log files to technical support to help troubleshoot the issues. The System Manager log files are located in the `mlog` directory along with the ONTAP log files.
+If you encounter any issues when using ONTAP System Manager classic (available in ONTAP 9.7 and earlier), you can send the log files to help troubleshoot the issues if directed by NetApp Support. The System Manager log files are located in the `mlog` directory along with the ONTAP log files.
 
 .Steps
 
@@ -47,4 +47,5 @@ Log output can be voluminous and therefore can become difficult to manage. Syste
 
 These levels function hierarchically. A log level set to OFF indicates no logging of messages.
 
+// 2022-06-14, BURT 1485039
 // 2022-03-23, sm-classic rework, created by Aoife
